--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@metamask/providers": "^16.1.0",
+    "@next/env": "^14.2.3",
     "ethers": "^6.12.1",
+    "fs": "^0.0.1-security",
     "loglevel": "^1.9.1",
     "next": "14.2.3",
     "react": "^18",
