--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "hardhat compile",
     "node": "hardhat node 2>&1 | tee  ./log/hardhat_node.log",
-    "dev": "npm run compile && hardhat ignition deploy ./ignition/modules/Pddikti.ts --network localhost 2>&1 | tee  ./log/hardhat_ignition_deploy.log",
+    "dev": "npm run compile && hardhat ignition deploy ./ignition/modules/Pddikti.ts --network localhost --reset 2>&1 | tee  ./log/hardhat_ignition_deploy.log",
     "visualize": "hardhat ignition visualize ./ignition/modules/Pddikti.ts"
   },
   "author": "",
@@ -17,7 +17,9 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.1.0",
     "ethers": "^6.12.1",
-    "hardhat": "^2.22.3"
+    "hardhat": "^2.22.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
