--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@metamask/providers": "^16.1.0",
     "@next/env": "^14.2.3",
+    "@nextui-org/react": "^2.3.6",
     "ethers": "^6.12.1",
+    "framer-motion": "^11.1.9",
     "fs": "^0.0.1-security",
     "loglevel": "^1.9.1",
     "next": "14.2.3",
